Fix minor margin-top alignment

--- a/client/src/derick-style.css
+++ b/client/src/derick-style.css
@@ -235,7 +235,7 @@
 
 .DPproduct_shoprunner_image {
   float: left; 
-  height: 5rem; 
+  height: 1.25rem; 
   width: 1.25rem;
 }
 
@@ -564,6 +564,7 @@
 .DPmini_cart {
   font-family: Gotham Narrow,Sans-Serif;
   min-width: 1024px !important;
+  height: 100%;
   background: white;
 }
 
